--- a/build.xml
+++ b/build.xml
@@ -1,30 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
-** This is a template build file for a JOSM  plugin.
-**
-** Maintaining versions
-** ====================
-** see README.template
-**
-** Usage
-** =====
-** To build it run
-**
-**    > ant  dist
-**
-** To install the generated plugin locally (in you default plugin directory) run
-**
-**    > ant  install
-**
-** The generated plugin jar is not automatically available in JOSMs plugin configuration
-** dialog. You have to check it in first.
-**
--->
-<project name="myPluginName" default="dist" basedir=".">
-    <!--
-      ************************************************
-      ** should not be necessary to change the following properties
-     -->
+<project name="graphview" default="dist" basedir=".">
+
     <property name="josm"                   location="../../core/dist/josm-custom.jar"/>
     <property name="plugin.build.dir"       value="build"/>
     <property name="plugin.src.dir"         value="src"/>
@@ -62,35 +37,26 @@
     **********************************************************
     -->
     <target name="dist" depends="compile,revision">
-        <echo message="creating ${plugin.jar.name} ... "/>
-        <copy todir="${plugin.build.dir}/resources">
-            <fileset dir="resources"/>
-        </copy>
+        <echo message="creating ${plugin.jar} ... "/>
         <copy todir="${plugin.build.dir}/images">
             <fileset dir="images"/>
         </copy>
+        <copy todir="${plugin.build.dir}/files">
+            <fileset dir="files"/>
+        </copy>
         <copy todir="${plugin.build.dir}">
             <fileset dir=".">
-                <include name="README" />
                 <include name="LICENSE" />
             </fileset>
         </copy>
         <jar destfile="${plugin.jar}" basedir="${plugin.build.dir}">
-    <!--
-        ************************************************
-        ** configure these properties. Most of them will be copied to the plugins
-        ** manifest file. Property values will also show up in the list available
-        ** plugins: http://josm.openstreetmap.de/wiki/Plugins.
-        **
-        ************************************************
-    -->
             <manifest>
-                <attribute name="Author" value="..."/>
-                <attribute name="Plugin-Class" value="..."/>
+                <attribute name="Author" value="Tobias Knerr"/>
+                <attribute name="Plugin-Class" value="org.openstreetmap.josm.plugins.graphview.plugin.GraphViewPlugin"/>
                 <attribute name="Plugin-Date" value="${version.entry.commit.date}"/>
-                <attribute name="Plugin-Description" value="..."/>
-                <attribute name="Plugin-Link" value="..."/>
-                <attribute name="Plugin-Mainversion" value="..."/>
+                <attribute name="Plugin-Description" value="Visualizes routing information as a routing graph."/>
+                <attribute name="Plugin-Link" value="http://wiki.openstreetmap.org/index.php/JOSM/Plugins/Graphview"/>
+                <attribute name="Plugin-Mainversion" value="0.1"/>
                 <attribute name="Plugin-Version" value="${version.entry.commit.revision}"/>
             </manifest>
         </jar>
